--- a/src/app/features/reserved-area/broker/package-create/package-create.component.scss
+++ b/src/app/features/reserved-area/broker/package-create/package-create.component.scss
@@ -1,3 +1,4 @@
+
 .col-form-label{
   color: #20a8d8 !important;
   padding-top: 10px;
@@ -49,4 +50,9 @@ div.divDateTime {
     background-size: 24px;
     background-repeat: no-repeat;
   }
+}
+
+ng-select.ng-invalid.ng-touched .ng-select-container {
+  border-color: #f86c6b!important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 3px #fde6e8 !important;
 }
