--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,6 @@
 // If you want to add something do it here
 @import "custom";
 @import '../../node_modules/flatpickr/dist/flatpickr.css';
+
+// Font Mr. Robot
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,400');
