--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -173,17 +173,26 @@ angular-file-uploader div.container {
   }
 }
 
-.coupon-price {
+.coupon-price, .coupon-package {
   position: absolute;
-  background-color: #4dbd74;
-  //border-radius: 0 0 0 0.25rem;
   top: 0;
-  right: 0;
   font-size: 1.25em;
   font-weight: bold;
   padding: 5px 10px;
   color: white;
   text-shadow: 1px 1px 8px black;
+}
+
+.coupon-price {
+  background-color: #4dbd74;
+  right: 0;
+}
+
+.coupon-package {
+  color: #fff;
+  background-color: #bd0a0d;
+  left: 0;
+  box-shadow: 1px 1px 5px gray;
 }
 
 .coupon-cart {
