--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -40,7 +40,27 @@
               >
             </span>
         </p>
-        <div *ngIf="desktopMode">
+        <p *ngIf="couponsPackage.length > 0"><i class="fas fa-fw fa-box-open text-secondary"></i> Coupons inclusi nel pacchetto: <i style="color: #999;">({{couponsPackage.length}})</i></p>
+        <div   style=" background-color: snow" *ngFor="let cp of couponsPackage">
+          <div  class="striped container-fluid d-block d-md-block d-xl-block">
+            <div  id="center">
+              <i style="color: #999; font-size: 15px;">{{cp.title}} alla finesivince con tanto sacrificio ma all fine è quello che conta col culo a mascherina</i>
+            </div>
+            <div>
+              <div  class="container-image-map"  id="right">
+                <img class=" crop-package centered-and-cropped-package text-center" src="{{'https://maps.googleapis.com/maps/api/staticmap?size=600x300&zoom=18&maptype=roadmap&markers=size:mid%7C' + cp.constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}">
+                <h5 class="centered-text-image-map" *ngIf="cp.constraints == null"> Mappa assente</h5>
+              </div>
+              <div   id="left">
+                <img  class=" crop-package centered-and-cropped-package"  src="{{imageURL + cp.image}}" >
+              </div>
+            </div>
+            <br>
+          </div>
+          <hr/>
+        </div>
+
+        <div style="padding-top: 30px" *ngIf="desktopMode">
           <button *ngIf="!inCart(couponPass.id) && couponPass.max_quantity > 0"
                   class="btn btn-lg btn-success float-right ml-2"
                   [disabled]="couponPass.max_quantity === 0 || couponPass.quantity === 0" (click)="openModal(template)">
@@ -49,7 +69,7 @@
           <button *ngIf="inCart(couponPass.id)" class="btn btn-lg btn-success float-right ml-2" (click)="viewCart()"><i
             class="fas fa-shopping-cart"></i> Go to cart
           </button>
-          <button class="btn btn-lg btn-primary float-right" (click)="retry()">Ritorna allo shopping</button>
+          <button  class="btn btn-lg btn-primary float-right" (click)="retry()">Ritorna allo shopping</button>
         </div>
 
         <div *ngIf="!desktopMode">
