--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
@@ -41,3 +41,36 @@
   padding-left: 3em;
 }
 
+#content{ padding:4px 10px 10px 10px;}
+#left{ float:left; width:49%;  }
+#center{ float: top; padding-top: 20px; padding-bottom: 15px}
+#right{width:49%; float:right; }
+.crop-package {
+  width: 100%;
+  height: 120px;
+  overflow: hidden !important;
+}
+
+.centered-and-cropped-package {
+  object-fit: cover
+}
+
+.centered-text-image-map {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.container-image-map {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+hr {
+  margin-top: 120px;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid #bd0a0d;
+}
+
