--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -1,11 +1,12 @@
 <div *ngIf="couponPass !== null" class="container-fluid">
   <div class="row">
-    <div class="col-md-10 col-12 offset-md-1">
+    <div class="col-lg-12 col-xl-9">
       <div class="card mx-3">
-        <div class="card-body p-4">
-          <h1 class="text-center">{{fromEdit ? 'Modifica' : 'Crea'}}</h1>
-          <h4 class="text-muted text-center">{{fromEdit ? 'Modifica ' : 'Crea '}} Coupon</h4>
-
+        <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
+          <img src="assets/img/add_coupon.png" alt="{{fromEdit ? 'Modifica' : 'Crea'}} nuovo coupon" style="width:50px; float:left; margin-right:30px"/>
+          <h6 class="display-4" style="float:left; font-size:30pt;">{{fromEdit ? 'Modifica ' : 'Crea '}} coupon</h6>
+        </div>
+        <div class="card-body p-5">
           <form [formGroup]="couponForm" (ngSubmit)="saveChange()">
 
             <div class="form-group row">
