--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -6,8 +6,8 @@
         <th scope="col" style="width: 40%">Titolo</th>
         <th scope="col" style="width: 20%">Immagine</th>
         <th scope="col" style="width: 15%">Prezzo</th>
-        <th scope="col" style="width: 25%">Stato</th>
-        <th scope="col" style="width: 10%"></th>
+        <th scope="col" style="width: 10%">Stato</th>
+        <th scope="col" style="width: 15%"></th>
       </tr>
       </thead>
 
@@ -28,7 +28,7 @@
             <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b>
             </td>
 
-            <td>
+            <td class="text-center">
               <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
                 <i class="fas fa-info-circle"></i> Dettagli
               </button>
@@ -46,8 +46,8 @@
       <tr>
         <th scope="col" style="width: 50%">Titolo</th>
         <th scope="col" style="width: 15%">Prezzo</th>
-        <th scope="col" style="width: 25%">Stato</th>
-        <th scope="col" style="width: 10%"></th>
+        <th scope="col" style="width: 15%">Stato</th>
+        <th scope="col" style="width: 20%"></th>
       </tr>
       </thead>
 
@@ -66,7 +66,7 @@
           <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b>
           </td>
 
-          <td>
+          <td class="text-center">
             <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
               <i class="fas fa-info-circle"></i> Dettagli
             </button>
