--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="couponPass && !error404" class="container-fluid px-0">
   <div class="col-xl-6 col-lg-10 col-md-10 col-sm-12 pl-md-0">
-    <div class="card mx-4" style="padding: 5px">
+    <div class="card mx-md-3" style="padding: 5px">
       <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
       <div class="card-body p-4">
         <h3 class="card-title mb-0">{{couponPass.title}}</h3>
@@ -44,7 +44,7 @@
         <div   style=" background-color: snow" *ngFor="let cp of couponsPackage">
           <div  class="striped container-fluid d-block d-md-block d-xl-block">
             <div  id="center">
-              <i style="color: #999; font-size: 15px;">{{cp.title}} alla finesivince con tanto sacrificio ma all fine è quello che conta col culo a mascherina</i>
+              <i style="color: #999; font-size: 15px;">{{cp.title}}</i>
             </div>
             <div>
               <div  class="container-image-map"  id="right">
