--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -47,11 +47,10 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-
   <div class="modal-body">
     <form [formGroup]="myForm" class="container">
       <div class="form-group row">
-        <label class="col-sm-7 my-auto" style="font-size: 16px;">Inserisci la quantità: <i class="text-info">
+        <label class="col-sm-7 my-auto pl-0" style="font-size: 16px;">Inserisci la quantità: <i class="text-info">
           ({{maxQuantity}} disponibil{{maxQuantity > 1 ? 'i' : 'e' }})</i></label>
 
         <input formControlName="quantity" class="col-sm-2 form-control d-inline-block" type="number" min="1"
@@ -68,7 +67,6 @@
       </div>
     </form>
   </div>
-
   <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="decline()">Annulla</button>
     <button [disabled]="inCart(modalCoupon.id)" type="button" class="btn btn-success" (click)="addToCart(modalCoupon)">
