--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -71,7 +71,7 @@ app-core-sidebar {
   }
 
   #main-container {
-    margin-top: 27px;
+    margin-top: 0px; // was 27px
   }
 }
 
@@ -158,6 +158,22 @@ app-core-header .navbar {
 
 app-core-breadcrumb nav {
   height: 50px;
+}
+
+#select-category {
+  height: 35px;
+}
+
+@media only screen and (max-width: 768px){
+  .search-input {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 450px){
+  .search-input {
+    width: 30%;
+  }
 }
 
 .btn.btn-info.btn-sm.resetBtn {
