--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order-detail/coupon-order-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order-detail/coupon-order-detail.component.html
@@ -1,7 +1,8 @@
+<!--
 <div class="container-fluid">
   <ng-container *ngFor="let order of orders">
     <div *ngIf="order" class="container-fluid px-0 bg-white">
-      <!--<div class="row">-->
+      &lt;!&ndash;<div class="row">&ndash;&gt;
       <div class="col-xl-6 col-lg-10 col-md-10 col-sm-12 pl-md-0">
         <div [class]="classMx4" style="padding: 5px">
           <div class="card-body p-4">
@@ -33,3 +34,4 @@
     </div>
   </ng-container>
 </div>
+-->
