[fix] Cart total, tables style

--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order-detail/coupon-order-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order-detail/coupon-order-detail.component.html
@@ -1,4 +1,4 @@
-<!--
+<!-- TODO TO CHECk
 <div class="container-fluid">
   <ng-container *ngFor="let order of orders">
     <div *ngIf="order" class="container-fluid px-0 bg-white">
