--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -258,6 +258,7 @@ angular-file-uploader div.container {
 table {
   background-color: white!important;
   border: 1px solid #778899;
+  box-shadow: 1px 20px 20px #80808030
 }
 
 .form-check {
