--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -21,6 +21,7 @@
           <div class="row px-3 py-2">
             <div class="card-body p-3">
               <ng-container *ngFor="let coupon of order.coupons; let i = index">
+
                 <div class="row">
                   <div class="col-3 pb-2 pr-2">
                     <img class="img-fluid" [src]="imageUrl(coupon.image)" alt="Card image cap">
@@ -32,7 +33,7 @@
                     <h5 class="mb-0">{{formatPrice(coupon.price*coupon.quantity)}}</h5>
 
                     <div class="buttons-bottom">
-                      <button class="btn btn-success mr-2" (click)="myPurchases()">
+                      <button class="btn btn-success mr-2" (click)="redeem(coupon, coupon.token)">
                         <i class="fas fa-check-circle mr-1"></i>Riscatta
                       </button>
                       <button class="btn btn-info text-white" (click)="details(coupon)">
@@ -43,6 +44,7 @@
                 </div>
 
                 <hr class="my-3" *ngIf="(i+1) !== order.coupons.length">
+
               </ng-container>
             </div>
           </div>
