--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -33,7 +33,7 @@
                     <h5 class="mb-0">{{formatPrice(coupon.price*coupon.quantity)}}</h5>
 
                     <div class="buttons-bottom">
-                      <button class="btn btn-success mr-2" (click)="redeem(coupon, coupon.token)">
+                      <button class="btn btn-success mr-2" (click)="redeem(coupon)">
                         <i class="fas fa-check-circle mr-1"></i>Riscatta
                       </button>
                       <button class="btn btn-info text-white" (click)="details(coupon)">
