--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -41,7 +41,7 @@
     <button type="button" class="close pull-right mb-4" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h3 class="mb-3">Codice coupon: {{couponPass.token.token}}</h3>
-    <qrcode class="d-table mx-auto" [qrdata]="couponPass.token.token" [size]="qrSize" [level]="'L'"></qrcode>
+    <h3 class="mb-3">Codice coupon: {{couponPass.qrToken}}</h3>
+    <qrcode class="d-table mx-auto" [qrdata]="couponPass.qrToken" [size]="qrSize" [level]="'L'"></qrcode>
   </div>
 </ng-template>
