--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -30,46 +30,23 @@
             </div> <!-- Description -->
 
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Immagine</label>
-              <div class="col-sm-10">
-                <div id="yourImage">
-                  <img src="{{imageURL}}">
+              <label class="col-lg-2 col-sm-4 col-form-label">Immagine</label>
+
+                <div class="col-lg-2 col-sm-4 col-form-label" id="yourImage">
+                  <img src="{{imageSelected? imageSelected: imageURL}}">
                 </div>
+                  <div >
+                    <label  class="col-lg-3 col-sm-6 col-form-label" style="padding-right: 8px">Cambia immagine </label>
 
-                <input  type="file" class="col-sm-6 p-0" formControlName="image" ng2FileSelect [uploader]="uploader"
-                       [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
+                    <input (change)="preview(file.files)" #file class="col-lg-9 col-sm-6 col-form-label" accept="image/*" type="file"  formControlName="image" ng2FileSelect [uploader]="uploader"
+                           [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
 
-                <div *ngFor="let item of uploader.queue" class="col-sm-6 p-0 mr-0 float-right">
-                  <div>
-                    <button type="button" class="btn btn-success btn-sm ml-1"
-                            (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                      <span class="glyphicon glyphicon-upload"></span> Aggiorna
-                    </button>
-                    <button type="button" class="btn btn-warning btn-sm ml-1"
-                            (click)="item.cancel()" [disabled]="!item.isUploading">
-                      <span class="glyphicon glyphicon-ban-circle"></span> Annulla
-                    </button>
-                    <button type="button" class="btn btn-danger btn-sm ml-1"
-                            (click)="item.remove()">
-                      <span class="glyphicon glyphicon-trash"></span> Rimuovi
-                    </button>
                   </div>
-                </div>
-
-              <div class="mt-2">
-                Attendi:
-                <div class="progress" style="width: 75%;">
-                  <div class="progress-bar" role="progressbar"
-                       [ngStyle]="{ 'width': uploader.progress + '%' }">
-                  </div>
-                </div>
-              </div>
 
                 <div *ngIf="submitted && f.image.errors" class="invalid-feedback">
                   <!--<div *ngIf="f.image.errors">Image is required</div>-->
                   <div>Immagine obbligatoria.</div>
                 </div>
-              </div>
             </div> <!-- Image -->
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Prezzo</label>
@@ -109,7 +86,37 @@
                   <label class="custom-control-label" for="privateCheck">Privato</label>
                 </div>
               </div>
-            </div> <!-- Published From -->
+            </div>
+            <div  class="form-group row">
+              <label class="col-sm-2 col-form-label">Seleziona categorie: </label>
+              <div class="col-sm-8">
+                <ng-select formControlName="categories"
+                           [items]="categories"
+                           [multiple]="true"
+                           [closeOnSelect]="true"
+                           [searchable]= "true"
+                           bindLabel="name"
+                           placeholder="Seleziona categorie"
+                           [(ngModel)]="selectedCategories">
+                </ng-select>
+              </div>
+
+            </div>
+            <div  class="form-group row">
+              <label class="col-sm-2 col-form-label">Privato per: </label>
+              <div class="col-sm-8">
+                <ng-select formControlName="broker"
+                           [items]="brokers"
+                           [multiple]="true"
+                           [closeOnSelect]="true"
+                           [searchable]="true"
+                           bindLabel="username"
+                           placeholder="Seleziona broker"
+                           [(ngModel)]="selectedBroker">
+                </ng-select>
+              </div>
+            </div>
+            <!-- Published From -->
 
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Valido da:</label>
