--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -4,17 +4,17 @@
       <div class="d-none d-md-none d-lg-block" *ngIf="cart.length > 0">
         <table class="table table-striped table-borderless">
           <thead>
-          <tr>
-            <th style="width: 40%">Titolo</th>
-            <th style="width: 10%">Immagine</th>
-            <th style="width: 10%">Prezzo</th>
-            <th style="width: 10%">Quantità</th>
-            <th style="width: 10%">Scadenza</th>
-            <th style="width: 5%"></th>
-            <th style="width: 5%"></th>
-            <th style="width: 5%"></th>
-            <th style="width: 5%"></th>
-          </tr>
+            <tr>
+              <th style="width: 36%">Titolo</th>
+              <th style="width: 10%">Immagine</th>
+              <th style="width: 10%">Prezzo</th>
+              <th style="width: 7%">Quantità</th>
+              <th style="width: 7%">Scadenza</th>
+              <th style="width: 2%"></th>
+              <th style="width: 2%"></th>
+              <th style="width: 13%"></th>
+              <th style="width: 13%"></th>
+            </tr>
           </thead>
           <tr class="bg-blue">
             <td colspan="9"></td>
@@ -39,12 +39,12 @@
               </button>
             </td>
 
-            <td>
+            <td class="text-xl-center text-md-right text-1eft">
               <button type="button" class="btn btn-outline-dark" (click)="details(coupon)"><i
                 class="fas fa-info-circle"></i> <span class="d-xl-inline-block d-lg-none">Dettagli</span>
               </button>
             </td>
-            <td>
+            <td class="text-xl-center text-left">
               <button type="button" class="btn btn-danger" (click)="openModal(template)"><i class="fas fa-trash"></i>
                 <span class="d-xl-inline-block d-lg-none">Elimina</span>
               </button>
@@ -72,7 +72,7 @@
         </table>
 
         <div style="text-align: right; padding-bottom: 2em;padding-top: 1em">
-          <h5 class="">Importo totale: {{formatPrice(totalAmount)}}</h5>
+          <h5 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h5>
 
         </div>
         <div class="card-body p-0">
@@ -147,7 +147,7 @@
 
         </table>
         <div style="text-align: right; ; padding-bottom: 2em; padding-top: 1em">
-          <h5 class="">Importo totale: {{formatPrice(totalAmount)}}</h5>
+          <h5 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h5>
 
         </div>
         <div class="card-body p-0">
@@ -222,10 +222,10 @@
           </div>
 
           <div class=" card-body p-0 float-right container-fluid">
-            <button class="btn btn-lg btn-success float-right" type="button" (click)="goToDetailPayment()"><i
+            <button class="btn btn-lg btn-success float-right ml-2" type="button" (click)="goToDetailPayment()"><i
               class="fas fa-euro-sign mr-2"></i> Paga
             </button>
-            <button class="btn btn-lg btn-primary float-right mr-sm-0 mr-1" (click)="retry()">
+            <button class="btn btn-lg btn-primary float-right mr-sm-0" (click)="retry()">
               <i class="fas fa-shopping-basket mr-2"></i> Shopping
             </button>
             <button class="btn btn-lg btn-warning text-white float-left mr-sm-0 mr-1"
