--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -5,15 +5,15 @@
         <table class="table table-striped table-borderless">
           <thead>
             <tr>
-              <th style="width: 36%">Titolo</th>
-              <th style="width: 10%">Immagine</th>
-              <th style="width: 10%">Prezzo</th>
-              <th style="width: 7%">Quantità</th>
-              <th style="width: 7%">Scadenza</th>
-              <th style="width: 2%"></th>
-              <th style="width: 2%"></th>
-              <th style="width: 13%"></th>
-              <th style="width: 13%"></th>
+              <th scope="col">Titolo</th>
+              <th scope="col" style="width: 10%;">Immagine</th>
+              <th scope="col" style="width: 10%;">Prezzo</th>
+              <th scope="col">Quantità</th>
+              <th scope="col">Scadenza</th>
+              <th scope="col"></th>
+              <th scope="col"></th>
+              <th scope="col"></th>
+              <th scope="col"></th>
             </tr>
           </thead>
           <tr class="bg-blue">
@@ -40,12 +40,13 @@
             </td>
 
             <td class="text-xl-center text-md-right text-1eft">
-              <button type="button" class="btn btn-outline-dark" (click)="details(coupon)"><i
-                class="fas fa-info-circle"></i> <span class="d-xl-inline-block d-lg-none">Dettagli</span>
+              <button type="button" class="btn btn-outline-dark" (click)="details(coupon)">
+                <i class="fas fa-info-circle mr-xl-1 mr-0"></i> <span class="d-xl-inline-block d-lg-none">Dettagli</span>
               </button>
             </td>
             <td class="text-xl-center text-left">
-              <button type="button" class="btn btn-danger" (click)="openModal(template)"><i class="fas fa-trash"></i>
+              <button type="button" class="btn btn-danger" (click)="openModal(template)">
+                <i class="fas fa-trash mr-xl-1 mr-0"></i>
                 <span class="d-xl-inline-block d-lg-none">Elimina</span>
               </button>
             </td>
@@ -72,7 +73,7 @@
         </table>
 
         <div style="text-align: right; padding-bottom: 2em;padding-top: 1em">
-          <h5 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h5>
+          <h4 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h4>
 
         </div>
         <div class="card-body p-0">
@@ -147,7 +148,7 @@
 
         </table>
         <div style="text-align: right; ; padding-bottom: 2em; padding-top: 1em">
-          <h5 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h5>
+          <h4 class="font-weight-bold">Importo totale: {{formatPrice(totalAmount)}}</h4>
 
         </div>
         <div class="card-body p-0">
@@ -217,7 +218,7 @@
             </ng-template>
           </div>
           <div style="text-align: right" class=" float-right">
-            <h5 class="">Totale: {{formatPrice(totalAmount)}}</h5>
+            <h4 class="">Totale: {{formatPrice(totalAmount)}}</h4>
 
           </div>
 
