--- a/src/app/features/reserved-area/consumer/cart/cart.component.scss
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.scss
@@ -28,3 +28,9 @@
     margin-right: 5px;
   }
 }
+
+@media only screen and (min-width: 1200px){
+  .btn.btn-outline-dark, .btn.btn-danger {
+    width: 100px;
+  }
+}
