[fix] Order responsive

--- a/src/app/core/breadcrumb/breadcrumb.component.scss
+++ b/src/app/core/breadcrumb/breadcrumb.component.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .padding-breadcrumb-mobile {
     padding-bottom: 7em;
   }
@@ -9,6 +9,12 @@
     position: fixed;
     width: 100%;
     z-index: 1;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #select-category {
+    width: 133px;
   }
 }
 
