--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.scss
@@ -26,8 +26,39 @@ h2 {
   text-align: center;
 }
 
-.buttons-bottom {
-  position: absolute;
-  bottom: 0;
-  right: 15px;
+//@media only screen and (min-width: 576px){
+  .buttons-bottom {
+    position: absolute;
+    bottom: 0;
+    right: 15px;
+  }
+//}
+
+@media only screen and (max-width: 420px){
+  .buttons-bottom {
+    position: initial;
+    margin-top: 10px;
+    float: right;
+  }
+
+  .card-body {
+    h4 {
+      font-size: 16px;
+      font-weight: 600;
+    }
+
+    h5 {
+      font-size: 14px;
+    }
+
+    button {
+      font-size: 12px;
+    }
+  }
+
 }
+
+/*.buttons-bottom {
+  position: initial;
+  margin-top: 10px;
+}*/
