--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -294,6 +294,10 @@ table {
   color: rgb(204, 51, 0) !important;
 }
 
+.bg-red-sardcoin {
+  background-color: rgb(204, 51, 0) !important;
+}
+
 .gray-sardcoin {
   color: rgb(51, 63, 80) !important;
 }
