--- a/src/app/features/reserved-area/payment-details/payment-details.component.html
+++ b/src/app/features/reserved-area/payment-details/payment-details.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mb-0">
   <div class="row">
     <div class="col-lg-12 col-xl-9">
-      <div class="col-sm-4 p-3 bg-red-sardcoin" style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
+      <div class="col-lg-5 col-md-6 p-3 bg-red-sardcoin" style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
         <h4 class="text-white text-center text-uppercase mb-0">Aggiorna dati di fatturazione</h4>
       </div>
       <div class="card">
