--- a/src/app/features/reserved-area/personal-info/personal-info.component.scss
+++ b/src/app/features/reserved-area/personal-info/personal-info.component.scss
@@ -3,3 +3,14 @@
   font-size: 12px;
   font-weight: 500;
 }
+
+h4 {
+  font-size: 19px;
+}
+
+.card {
+  box-shadow: 1px 20px 20px #80808030;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border: 0;
+}
