--- a/src/app/features/reserved-area/consumer/cart/cart.component.scss
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.scss
@@ -30,7 +30,7 @@
 }
 
 @media only screen and (min-width: 1200px){
-  .btn.btn-outline-dark, .btn.btn-danger {
+  table .btn.btn-outline-dark, table .btn.btn-danger {
     width: 100px;
   }
 }
