--- a/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
@@ -19,8 +19,8 @@
                 </div>
               </div>
 
-              <div class="col-md-2 col-sm-3 text-center">
-                <h5>oppure</h5>
+              <div class="col-md-2 col-sm-3 my-2 my-sm-0 text-center">
+                <h5 class="mb-0">oppure</h5>
               </div>
 
               <!--<div class="w-100 d-lg-none d-md-block d-none"></div>-->
