--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -24,6 +24,9 @@
 
                 <div class="row">
                   <div class="col-sm-3 col-6 pb-2 pr-2">
+                    <div *ngIf="coupon.type === ITEM_TYPE.PACKAGE" class="coupon-package text-uppercase" style="margin-left: 15px;">
+                      <i class="fas fa-box-open mr-1"></i>
+                    </div>
                     <img class="img-fluid" [src]="imageUrl(coupon.image)" alt="Card image cap">
                     <div class="quantity position-absolute rounded-circle bg-info">{{coupon.quantity}}</div>
                   </div>
