[feat] Coupon bought improved with purchase date

--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -28,7 +28,8 @@
           </p>
 
           <button class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei acquisti</button>
-          <button class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
+          <button *ngIf="!couponPass.token.verifier && isValid(couponPass)" class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
+          <button *ngIf="couponPass.token.verifier || !isValid(couponPass)" class="btn btn-warning btn-retry">Non più valido</button>
         </div>
 
       </div>
