--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -3,21 +3,22 @@
     <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
       <tr>
-        <th scope="col" style="width: 40%">Titolo</th>
+        <th scope="col" style="width: 38%">Titolo</th>
         <th scope="col" style="width: 20%">Immagine</th>
-        <th scope="col" style="width: 15%">Prezzo</th>
-        <th scope="col" style="width: 10%">Stato</th>
-        <th scope="col" style="width: 15%"></th>
+        <th scope="col" style="width: 10%">Prezzo</th>
+        <th scope="col" style="width: 10%">Data acquisto</th>
+        <th scope="col" style="width: 8%">Stato</th>
+        <th scope="col" style="width: 14%"></th>
       </tr>
       </thead>
 
       <tr class="bg-blue">
-        <td colspan="5"></td>
+        <td colspan="6"></td>
       </tr>
 
       <tbody class="col-sm-12 striped">
         <ng-container *ngFor="let coupon of coupons;">
-          <tr *ngFor="let token of coupon.CouponTokens ">
+          <tr> <!--*ngFor="let token of coupon.CouponTokens "> -->
             <td>
               <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
               <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
@@ -25,11 +26,12 @@
             <td><img class="img-thumbnail" [src]="imageUrl(coupon.image)" style="max-width: 150px;" alt="Card image cap">
             </td>
             <td>{{formatPrice(coupon.price)}}</td>
-            <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b>
+            <td>{{formatDate(coupon.purchase_time)}}</td>
+            <td [ngStyle]="{color: getStateColor(formatState(coupon))}" class="text-uppercase td-state font-weight-bold">
+              {{formatState(coupon)}}
             </td>
-
             <td class="text-center">
-              <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
+              <button type="button" (click)="details(coupon)" class="btn btn-info text-white">
                 <i class="fas fa-info-circle"></i> Dettagli
               </button>
             </td>
@@ -46,33 +48,35 @@
       <tr>
         <th scope="col" style="width: 50%">Titolo</th>
         <th scope="col" style="width: 15%">Prezzo</th>
+        <th scope="col" style="width: 15%">Data</th>
         <th scope="col" style="width: 15%">Stato</th>
-        <th scope="col" style="width: 20%"></th>
+        <th scope="col" style="width: 5%"></th>
       </tr>
       </thead>
 
       <tr class="bg-blue">
-        <td colspan="4"></td>
+        <td colspan="5"></td>
       </tr>
 
       <tbody class="col-sm-12 striped">
-      <ng-container *ngFor="let coupon of coupons;">
-        <tr *ngFor="let token of coupon.CouponTokens ">
-          <td>
-            <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
-            <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
-          </td>
-          <td>{{formatPrice(coupon.price)}}</td>
-          <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b>
-          </td>
-
-          <td class="text-center">
-            <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
-              <i class="fas fa-info-circle"></i> Dettagli
-            </button>
-          </td>
-        </tr>
-      </ng-container>
+        <ng-container *ngFor="let coupon of coupons;">
+          <tr> <!--*ngFor="let token of coupon.CouponTokens "> -->
+            <td>
+              <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
+              <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
+            </td> <!-- Titolo -->
+            <td>{{formatPrice(coupon.price)}}</td> <!-- Prezzo -->
+            <td>{{formatDate(coupon.purchase_time)}}</td> <!-- Data -->
+            <td [ngStyle]="{color: getStateColor(formatState(coupon))}" class="text-uppercase td-state font-weight-bold">
+              {{formatState(coupon)}}
+            </td> <!-- Stato -->
+            <td class="text-center">
+              <button type="button" (click)="details(coupon)" class="btn btn-info text-white">
+                <i class="fas fa-info-circle"></i>
+              </button>
+            </td> <!-- Info Button -->
+          </tr>
+        </ng-container>
       </tbody>
     </table>
   </div>
@@ -81,11 +85,11 @@
   <div class="col-md-12">
     <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
-      <tr>
-        <th scope="col" style="width: 60%">Titolo</th>
-        <th scope="col" style="width: 20%">Stato</th>
-        <th scope="col" style="width: 20%"></th>
-      </tr>
+        <tr>
+          <th scope="col" style="width: 60%">Titolo</th>
+          <th scope="col" style="width: 20%">Stato</th>
+          <th scope="col" style="width: 20%"></th>
+        </tr>
       </thead>
 
       <tr class="bg-blue">
@@ -93,21 +97,21 @@
       </tr>
 
       <tbody class="col-sm-12 striped">
-      <ng-container *ngFor="let coupon of coupons;">
-        <tr *ngFor="let token of coupon.CouponTokens ">
-          <td>
-            <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
-            <i style="color: #999; font-size: 15px;">{{coupon.description.substr(0, 40) + '...'}}</i>
-          </td>
-          <td [ngStyle]="{color: token.verifier ? 'red' : '#24cc32'}" class="text-uppercase td-state"><b>{{formatState(token.verifier)}}</b>
-          </td>
-          <td class="text-center">
-            <button type="button" (click)="details(coupon, token)" class="btn btn-info text-white">
-              <i class="fas fa-info-circle"></i>
-            </button>
-          </td>
-        </tr>
-      </ng-container>
+        <ng-container *ngFor="let coupon of coupons;">
+          <tr>
+            <td>
+              <span style="font-size: 17px;">{{coupon.title}}</span> <br/>
+              <i style="color: #999; font-size: 15px;">{{coupon.description.substr(0, 40) + '...'}}</i>
+            </td>
+            <td [ngStyle]="{color: getStateColor(formatState(coupon))}" class="text-uppercase td-state"><b>{{formatState(coupon)}}</b>
+            </td>
+            <td class="text-center">
+              <button type="button" (click)="details(coupon)" class="btn btn-info text-white">
+                <i class="fas fa-info-circle"></i>
+              </button>
+            </td>
+          </tr>
+        </ng-container>
       </tbody>
     </table>
   </div>
